# mcpdeployment

./: .env.remote.example  .gitignore  CLAUDE.md  DEPLOYMENT_QUICK_REFERENCE.md  QUICKSTART.md  README.md  STRUCTURE.md  pyproject.toml
data/: sample_data.json
docs/: HTTP_DEPLOYMENT.md  SCANNER_LIMITATIONS.md  SCANNER_SETUP.md  SSL_FIX_GUIDE.md  UNDERSTANDING_HTTP_SERVER.md
docs/methodology/: INDEX.md  PRACTICAL_EXAMPLES.md  QUICK_REFERENCE.md  README.md  SCANNING_FLOW_DIAGRAM.md  YARA_SCANNING_METHODOLOGY.md
reports/: .gitkeep
scripts/: setup_scanner.sh  test_http_local.sh  test_mcp_client.py  verify_http_server.sh
scripts/scanners/: cisco_api_scanner.py  llm_api_scanner.py  yara_scanner.py
src/mcpserver/: __main__.py  __main_remote__.py  server.py
tests/: test_http_server.py  test_scanner.py
